minor changes to index

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -312,14 +312,14 @@ finished on 02.mar.25 -->
 				</section>
 				<section class="notepad-boxes" id="chat">
 					<h3>chatbox</h3>
-					<iframe src="https://www3.cbox.ws/box/?boxid=3527348&boxtag=lFAd4a" width="100%" height="87%" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
+					<iframe src="https://www3.cbox.ws/box/?boxid=3527348&boxtag=lFAd4a" width="100%" height="86%" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
 				</section>
 				<!-- notepad wrapper end div -->
 			</section>
 		</aside>
 		<footer class="box">
 			<p><img title="doqmeat.com protected by nyan cat" src="!g/pix/nyancat.gif" alt="nyan cat"></p>
-			<p><a href="/notebook/links/credit.html#home">credit</a> for materials used / coded with <img title="LOVE!" src="!g/pix/heart-paper.gif" alt="love"> by <b>des</b> / on the web since <b>11.apr.23</b> / <a title="e-mail me!" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">🖂</a></p>
+			<p><a href="/notebook/links/credit.html#home">credit</a> for materials used / coded with <img title="LOVE!" src="!g/pix/heart-paper.gif" alt="love"> by <b>des</b> / on the web since <b>11.apr.23</b> / <a title="e-mail me!" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">e-mail</a></p>
 			<a title="link to rosemary's free palestine page full of great resources on how to know and help the people of palestine" href="https://hillhouse.neocities.org/journal/notes/palestine" target="_blank"><img src="/collection/internet-graphics/!g/palestine.gif" alt="free palestine button"></a>
 			<img src="/collection/internet-graphics/!g/notforchildren.jpg" alt="not intended for children">
 			<img src="/collection/internet-graphics/!g/transrights.png" alt="trans rights now!">
