--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -86,6 +86,7 @@ reverted back to v2.5 on 11.nov.24 cus i miss this silly layout
 	</aside>
 
 	<aside id="pen"><img src="!g/tulip.png" width="100%"></aside>
+	<script src="quotes.js"></script>
 	<script src="memo.js"></script>
 	<script src="/!f/draggable.js"></script>
 </body>
