--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -205,7 +205,7 @@
 			<a href="https://cloudworld.neocities.org/" target="_blank"><img src="!g/cloudworld.gif" alt="cloudworld"></a>
 			<a title="windchime - one of the early sites i discovered. used one of their templates for v1 of doqmeat.com too!" href="https://windchime.neocities.org/" target="_blank"><img src="!g/windchime.gif"></a>
 			<a title="whiona" href="https://whiona.me/" target="_blank"><img src="!g/whiona.png" alt="whiona"></a>
-			<a title="leilukin" href="https://leilukin.com/" target="_blank"><img src="!g/Leilukin.png" alt="leilukin"></a>
+			<a title="leilukin" href="https://leilukin.com/" target="_blank"><img src="!g/leilukin.png" alt="leilukin"></a>
 			<a href="https://pixalina.neocities.org/" target="_blank"><img src="!g/pixalina.gif" alt="pixalina"></a>
 			<a href="https://dear-j.neocities.org/" target="_blank"><img src="!g/dear-j.gif" alt="juano"></a>
 			<a title="lena raine's blog!" href="https://blog.radicaldream.land" target="_blank"><img src="https://i.postimg.cc/QxhG798p/dispatchblog-banner.gif"></a>
