--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -229,6 +229,8 @@
 			<a title="liminalmind" href="https://liminalmind.neocities.org/" target="_blank"><img src="!g/liminalmind.png" alt="liminalmind"></a>
 			<a title="peachmoon" href="https://peachmoon.moe/" target="_blank"><img src="!g/peachmoon.gif" alt="peachmoon"></a>
 			<a href="https://bluemeadows.moe" target="_blank"><img src="https://bluemeadows.moe/images/bluemeadows_88x31.gif" alt="visit bluemeadows.moe"></a>
+			<a href="https://hazilysora.neocities.org/" target="_blank" title="hazilysora"><img src="!g/hazilysora.png" alt="hazilysora"></a>
+			<a href="https://pux.nehukon.de/" target="_blank" title="puxped"><img src="!g/puxped.svg" alt="puxped"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
@@ -243,7 +245,6 @@
 			<a href="https://nicolesworld.neocities.org" target="_blank">nicolesworld</a> /
 			<a href="https://juneish.neocities.org/" target="_blank">juneish</a> /
 			<a href="https://neustadt.fr/" target="_blank">neustadt.fr</a> /
-			<a href="https://pux.nehukon.de" target="_blank">pux.nehukon.de</a> /
 			<a href="https://kiyuyu.nekoweb.org/" target="_blank">kiyuyu</a> /
 			<a title="web art... i love their stuff!! a massive inspiration to me and what i want to use the internet for" href="https://chia.design" target="_blank">chia.design</a> /
 			<a href="https://thalita.dev" target="_blank">thalita.dev</a> /
