--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -158,6 +158,7 @@
 			<img src="!g/idbeawolf.gif">
 			<img src="!g/bekindputer.gif">
 			<img src="!g/blackcat.gif">
+			<a href="https://user.xmission.com/~emailbox/catstuff.htm" target="_blank"><img src="!g/catboss-catstuff.gif" alt="you are not the boss of me"></a>
 			<img src="!g/stargazer.gif">
 			<img src="!g/DABLINKIE.gif">
 			<img src="!g/catsarepurrfect.gif">
