added a log to JS

--- a/doqmeat/learning/javascript/index.html
+++ b/doqmeat/learning/javascript/index.html
@@ -27,8 +27,8 @@
 		<nav>
 			<ul>
 				<li><a href="practice.html">thoughts n cheatsheet</a> - where i put what i've learned.</li>
-				<li><a href="smarter-way/index.html">a smarter way to learn JS</a> - taking notes as i read through it.</li>
 				<li><a href="freecodecamp-1.html">freecodecamp exercise 1</a> - learn basic JS by building a RPG</li>
+				<li><a href="smarter-way/index.html">a smarter way to learn JS</a> - taking notes as i read through it. (archived! i don't think i will keep reading this one.)</li>
 			</ul>
 			<h3>links</h3>
 			<ul>
