--- a/doqmeat/learning/javascript/practice.html
+++ b/doqmeat/learning/javascript/practice.html
@@ -33,6 +33,9 @@
 	<main>
 		<nav><a href="#thoughts">thoughts</a> / <a href="#sheet">cheatsheet</a></nav>
 		<h2 id="thoughts">thoughts</h2>
+		<p>my class <i>introduction to programming</i> (which focuses on c++) is kinda doing wonders for all the things that i've done with JS without really knowing WHY they worked the way they did... i'm also currently reading <i>JavaScript All-in-One For Dummies</i> which i had saved in a pdf from god knows where. i think my previous knowledge + my class is making the first few chapters of this kinda of a breeze but wow!!! i have learned so many little things about JS so far that i didn't know about. been mostly reading it on the train so i have a few notes of stuff i want to practice and write about on this page once i have some more free time. but at least for me, i think <mark>it is way easier to get all of this new information from a book</mark> rather then a documentation site (w3schools, mozilla, etc. etc.) it def makes the process of learning these things way less intimidating.</p>
+		<p class="date">05.mar.25</p>
+		<hr>
 		<p>learned how to remove classes and add them with an event like so:</p>
 		<textarea style="height:90px"> for (i = 0; i < buttons.length; i++) {
     buttons[i].classList.remove("active");
@@ -46,7 +49,6 @@
 		<hr>
 		<p>figured out how to do a box pop up and a img modal of sorts! i put a class tag on all that imgs where if you click them then i take the <code>src</code> and <code>alt</code> text into the img modal. you can check it out on the scans page of my <a title="currently a WIP!" href="https://siinamota.doqmeat.com/scans/" target="_blank" class="outlink">siinamota fansite</a>. i also use a similar thing for the imgs on my <a href="/microblog">microblog</a> but with a different method.</p>
 		<p>also learning how to use this bit of code with the examples mentioned above <br><code>i = 0; i &lt; example.length; i++</code></p>
-
 		<hr>
 
 		<select>
