--- a/doqmeat/learning/javascript/smarter-way/index.html
+++ b/doqmeat/learning/javascript/smarter-way/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="/!g/pix/sticky.gif">
   <link href="/fonts/stylesheet.css" rel="stylesheet">
-  <link href="/projects/body.css" rel="stylesheet">
+  <link href="../../body.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
   <script src="/!f/tooltip-jquary.js"></script>
   <script src="/!f/tooltip.js"></script>
