comment for self reminder

--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -146,6 +146,7 @@
 	</div>
 
 	<!-- 	me af pics -->
+	<!-- make this a gallery view where the pic pops up on a window on click -->
 	<div id="me" class="draggable">
 		<div class="header"><img src="!g/folder.png" class="folder"> me_irl<img onclick="closeBox('me')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
