--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -147,7 +147,7 @@ finished on 02.mar.25 -->
 					<br>
 					<p><span class="title">feeling: </span> <a href="https://www.imood.com/users/doqmeat"><img src="https://moods.imood.com/display/uname-doqmeat/trans-1/imood.gif" alt="The current mood of doqmeat at www.imood.com" border="0"></a></p>
 					<br>
-					<p><span class="title"><a title="via status.cafe" href="https://status.cafe/users/doqmeat" target="_blank">status:</a> </span>
+					<p><span class="title">status: </span>
 						<span id="statuscafe-username"></span>
 						<span id="statuscafe-content"></span>
 					</p>
@@ -170,8 +170,9 @@ finished on 02.mar.25 -->
 						<a href="https://peanits.lol/webrings/musicring/prev.php?slug=doqmeat">prev</a>
 						<a href="https://peanits.lol/webrings/musicring/rand.php">rand</a>
 						<a href="https://peanits.lol/webrings/musicring/next.php?slug=doqmeat">next</a>
+						<br>
 						<!-- latino webring -->
-						<script data-widget="pr" src="https://ourheroisasandwich.nekoweb.org/latinoring/webstring.js"></script>
+						<!-- <script data-widget="pr" src="https://ourheroisasandwich.nekoweb.org/latinoring/webstring.js"></script> -->
 						<!--			no AI webring-->
 						<map name="noaimini2">
 							<area href="https://baccyflap.com/noai" target="_blank" shape="rect" coords="5,3,83,14" alt="no ai webring" title="no ai webring">
