--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -50,6 +50,9 @@
 			<section id="y2025">
 				<!-- new entry! -->
 				<article>
+					<p><b>07.mar.25 - 10pm</b> i need to get braver.</p>
+				</article>
+				<article>
 					<p><b>24.feb.25 - 10pm</b> students from the computer science department have been doing some activities and today they talked about text editors. given a lot of people were already familiar with VSC we voted on trying out neovim. and man What The Fuck. like yes, i am intrigued but WHAT THE FUCK? how to people use this for coding i feel like i would kill myself if i ever tried to use neovim as my main text editor for coding. i can sort of see it as note-taking software tho. which brings me to share one of my <a title="By Default - Simple, Non-Commercial, Open Source Notes" href="https://youtu.be/XRpHIa-2XCE" target="_blank" class="outlink">favorite youtube videos ever</a></p>
 				</article>
 				<article>
