--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -49,6 +49,10 @@
 			<!-- 2025 section -->
 			<section id="y2025">
 				<!-- new entry! -->
+				<!-- button format: 'img path','alt','desc' -->
+				<article>
+					<p><b>08.mar.25 - 7pm</b> i do doodles of cats on my <i>calculus</i> notebook everytime i get something right without following the professor <button onclick="showPic('!g/250308-doodles-1.jpg','a drawing of a cat','')">doodles-1</button> <button onclick="showPic('!g/250308-doodles-2.jpg','a drawing of a cat','')">doodles-2</button> <button onclick="showPic('!g/250308-doodles-3.jpg','a drawing of a cat','')">doodles-3</button></p>
+				</article>
 				<article>
 					<p><b>07.mar.25 - 10pm</b> i need to get braver.</p>
 				</article>
