added some of my fav quotes in a JS array and one of them pops up on refresh

--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -65,19 +65,14 @@ reverted back to v2.5 on 11.nov.24 cus i miss this silly layout
 		</div>
 	</aside>
 
-	<aside id="memo2" class="memo draggable">
+	<aside id="memo3" class="memo draggable">
 		<div class="innermemo">
-			<iframe src="2025/calendar.html" id="calendar" scrolling="no"></iframe>
-			<div id="side">
-				a chocolate sepia record that is important to me and no one else <br> <b> - <a href="https://vocaloidlyrics.fandom.com/wiki/999/Powapowa-P" title="translation credit!">999</a> (siinamota)</b>
-			</div>
 		</div>
 	</aside>
 
-	<!-- <aside id="memo3" class="memo draggable">
-		<div class="innermemo">
-		</div>
-	</aside> -->
+	<aside id="memo2" class="memo draggable">
+		<iframe src="2025/calendar.html" id="calendar" scrolling="no"></iframe>
+	</aside>
 
 	<aside id="memo4" class="memo draggable">
 		<div class="innermemo">
