--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -51,6 +51,9 @@
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
 				<article>
+					<p><b>16.mar.25 - 1am</b> went to an art exhibition yesterday for the first time ever. that was pretty cool. <button onclick="showPic('!g/250316-punzante.jpg','oil on canvas of some yellow flowers','really liked this one. titled \'Punzante\' by Beatiz Echevarría.')">punzante.jpg</button></p>
+				</article>
+				<article>
 					<p><b>08.mar.25 - 7pm</b> i do doodles of cats on my <i>calculus</i> notebook everytime i get something right without following the professor <button onclick="showPic('!g/250308-doodles-1.jpg','a drawing of a cat','')">doodles-1</button> <button onclick="showPic('!g/250308-doodles-2.jpg','a drawing of a cat','')">doodles-2</button> <button onclick="showPic('!g/250308-doodles-3.jpg','a drawing of a cat','')">doodles-3</button></p>
 				</article>
 				<article>
