updates to scrapbook n microblog n currently

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -34,8 +34,10 @@
 			<!-- homepage section -->
 			<section id="home">
 				<p>choose the year you want to view!</p>
-				<!-- <button onclick="goToYear('y202x')">
-					<img src="" alt="2025 button thumbnail"> 2025</button> -->
+				<!-- 
+				<button onclick="goToYear('y202x')">
+				<img src="" alt="2025 button thumbnail"> 2025</button> 
+					-->
 				<button onclick="goToYear('y2025')">
 					<span class="year">2025</span>
 					<br>
@@ -50,6 +52,9 @@
 			<section id="y2025">
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
+				<article>
+					<p><b>25.mar.25 - 10am</b> sick once again... not sure with what but it has lasted for more than a week. i can barely talk right now bc i had to go to work anymore and the talking kinda fucked up my throat. sigh... i wish i didn't get sick so frequently. i was not like this pre covid.</p>
+				</article>
 				<article>
 					<p><b>16.mar.25 - 1am</b> went to an art exhibition yesterday for the first time ever. that was pretty cool. <button onclick="showPic('!g/250316-punzante.jpg','oil on canvas of some yellow flowers','really liked this one. titled \'Punzante\' by Beatiz Echevarría.')">punzante.jpg</button></p>
 				</article>
