--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -127,6 +127,7 @@ finished on 02.mar.25 -->
 			<aside id="sticker2" class="deco"><img src="/collection/internet-graphics/!g/borntodie.png" alt=""></aside>
 			<aside id="sticker6" class="deco"><a href="https://user.xmission.com/~emailbox/graphics.htm" target="_blank"><img title="from catstuff!" src="!f/v5/assets/meowunderstand.gif" alt="banner that reads 'which part of meow don't you understand?'"></a></aside>
 			<aside id="sticker8" class="deco"><a href="https://user.xmission.com/~emailbox/graphics.htm" target="_blank"><img title="from catstuff!" src="!f/v5/assets/benice.gif" alt="banner that reads 'please be nice to me, i love you'"></a></aside>
+			<!-- notepad wrapper -->
 			<section id="notepad">
 				<section id="stats" class="notepad-boxes">
 					<h3>stats</h3>
@@ -152,14 +153,14 @@ finished on 02.mar.25 -->
 						<span id="statuscafe-content"></span>
 					</p>
 					<br>
-					<p><span class="title">playing: </span> the style savvy games, <a href="vgs/games/balatro/index.html">balatro</a></p>
+					<p><span class="title">playing: </span> the style savvy games</p>
 					<br>
-					<p><span class="title">watching: </span> severance, the rose of versailles</p>
+					<p><span class="title">watching: </span> my cat from hell</p>
 					<!-- <br>
 					<p><span class="title">reading: </span> <i></i></p> -->
 					<br>
-					<p><span class="title">working on: </span> studying, cleaning up code here and there</p>
-					<p class="date">last updated: 03.mar.25</p>
+					<p><span class="title">working on: </span> studying, NOT being sick, cleaning up code here and there</p>
+					<p class="date">last updated: 25.mar.25</p>
 				</section>
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
