--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -53,7 +53,10 @@
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
 				<article>
-					<p><b>25.mar.25 - 10am</b> sick once again... not sure with what but it has lasted for more than a week. i can barely talk right now bc i had to go to work anymore and the talking kinda fucked up my throat. sigh... i wish i didn't get sick so frequently. i was not like this pre covid.</p>
+					<p><b>27.mar.25 - 4pm</b> sooooo ummm. yeah i might not be able to talk normally for like. week or two. and man. is it so frustrating not being able to talk. i am honestly mostly sad about it because i love participating in my classes and i haven't been able to do that at all this week. for future reference and for anyone who needs to hear it: please do not push yourself over a minimum wage job. all in all, i've been super busy with uni but specially calculus. that class is taking EVERTHING from me to be able to get the concepts. i might have talked about it here but i am so fucking slow with math. i have to spend like an absurd amount of time understanding things when it comes to math. it doesn't really click easy for me. and the amount of time that i've put into that class is basically almost all of my free time. and at the end, because of some dumb mistakes i didn't see in the 1st exam, i got a C. and i took the 2nd exam sick and with a headache and i lowkey forgot like half of the procedures so let's pray i end up getting a C on that one as well. at this point i just wanna pass the class with a C and i'll be happy. but man. I AM SLOW AT THIS.</p>
+				</article>
+				<article>
+					<p><b>25.mar.25 - 10am</b> sick once again... not sure with what but it has lasted for more than a week. i can barely talk right now bc i had to go to work yesterday and the talking kinda fucked up my throat. sigh... i wish i didn't get sick so frequently. i was not like this pre covid.</p>
 				</article>
 				<article>
 					<p><b>16.mar.25 - 1am</b> went to an art exhibition yesterday for the first time ever. that was pretty cool. <button onclick="showPic('!g/250316-punzante.jpg','oil on canvas of some yellow flowers','really liked this one. titled \'Punzante\' by Beatiz Echevarría.')">punzante.jpg</button></p>
