--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -143,6 +143,7 @@ finished on 02.mar.25 -->
 					<a href="https://info.flagcounter.com/924j"><img src="https://s11.flagcounter.com/count/924j/bg_FFFFFF/txt_000000/border_CCCCCC/columns_3/maxflags_15/viewers_3/labels_0/pageviews_0/flags_0/percent_0/" width="90%" alt="Flag Counter" border="0"></a>
 				</section>
 				<section class="notepad-boxes" id="now">
+					<!-- take out the break lines..... be normal -->
 					<br>
 					<h3>currently...</h3>
 					<br>
@@ -153,11 +154,11 @@ finished on 02.mar.25 -->
 						<span id="statuscafe-content"></span>
 					</p>
 					<br>
-					<p><span class="title">playing: </span> the style savvy games</p>
+					<p><span class="title">playing: </span> -</p>
 					<br>
 					<p><span class="title">watching: </span> my cat from hell</p>
-					<!-- <br>
-					<p><span class="title">reading: </span> <i></i></p> -->
+					<br>
+					<p><span class="title">reading: </span> -</p>
 					<br>
 					<p><span class="title">working on: </span> studying, NOT being sick, cleaning up code here and there</p>
 					<p class="date">last updated: 23.mar.25</p>
