--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -52,6 +52,9 @@
 			<section id="y2025">
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
+				<aticle>
+					<p><b>27.mar.25 - 4pm</b> i've also been trying to do some coding stuff ~for fun~ outside of my websites! i recently found out that you can build apps with the awesome trio of HTML/CSS/JS with a framework called <a class="outlink" href="https://www.electronjs.org/" target="_blank">electron</a> so once i have a little bit more of free time. i wanna try doing something with this!</p>
+				</aticle>
 				<article>
 					<p><b>27.mar.25 - 4pm</b> sooooo ummm. yeah i might not be able to talk normally for like. week or two. and man. is it so frustrating not being able to talk. i am honestly mostly sad about it because i love participating in my classes and i haven't been able to do that at all this week. for future reference and for anyone who needs to hear it: please do not push yourself over a minimum wage job. all in all, i've been super busy with uni but specially calculus. that class is taking EVERTHING from me to be able to get the concepts. i might have talked about it here but i am so fucking slow with math. i have to spend like an absurd amount of time understanding things when it comes to math. it doesn't really click easy for me. and the amount of time that i've put into that class is basically almost all of my free time. and at the end, because of some dumb mistakes i didn't see in the 1st exam, i got a C. and i took the 2nd exam sick and with a headache and i lowkey forgot like half of the procedures so let's pray i end up getting a C on that one as well. at this point i just wanna pass the class with a C and i'll be happy. but man. I AM SLOW AT THIS.</p>
 				</article>
