optimized JS for microblog + new post

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -38,12 +38,12 @@
 				<button onclick="goToYear('y202x')">
 				<img src="" alt="2025 button thumbnail"> 2025</button> 
 					-->
-				<button onclick="goToYear('y2025')">
+				<button onclick="goToYear('2025')">
 					<span class="year">2025</span>
 					<br>
 					<span id="logs2025">total logs: </span></button>
 
-				<button onclick="goToYear('y2024')">
+				<button onclick="goToYear('2024')">
 					<span class="year">2024</span>
 					<br>
 					<span id="logs2024">total logs: </span></button>
@@ -52,9 +52,13 @@
 			<section id="y2025">
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
-				<aticle>
+
+				<article>
+					<p><b>03.apr.25 - 4pm</b> in my (soon to be!) 2 years of having <i>doqmeat.com</i> i've had a couple of... questionable messages pop up on my chatbox and guestbook. i always delete them whenever i see them. <b>on <u>my</u> site</b> i do not let messages like that (mean for the sake of being mean) about me or my site roam around. though today i got one from someone saying something along the lines of <q>stop doing this, this is a waste of time</q>. it got me thinking how this place that i have built from the grown up is literally anything but a waste of my time. i've gotten to experience so many new things because of my interest in building this. i will always cherish my site. thank you for reminding me of that! oh, they also called me a nerd which i found really funny. does anyone get offended these days from being called a nerd? i should have let that message up, that was really good.</p>
+				</article>
+				<article>
 					<p><b>27.mar.25 - 4pm</b> i've also been trying to do some coding stuff ~for fun~ outside of my websites! i recently found out that you can build apps with the awesome trio of HTML/CSS/JS with a framework called <a class="outlink" href="https://www.electronjs.org/" target="_blank">electron</a> so once i have a little bit more of free time. i wanna try doing something with this!</p>
-				</aticle>
+				</article>
 				<article>
 					<p><b>27.mar.25 - 4pm</b> sooooo ummm. yeah i might not be able to talk normally for like. week or two. and man. is it so frustrating not being able to talk. i am honestly mostly sad about it because i love participating in my classes and i haven't been able to do that at all this week. for future reference and for anyone who needs to hear it: please do not push yourself over a minimum wage job. all in all, i've been super busy with uni but specially calculus. that class is taking EVERTHING from me to be able to get the concepts. i might have talked about it here but i am so fucking slow with math. i have to spend like an absurd amount of time understanding things when it comes to math. it doesn't really click easy for me. and the amount of time that i've put into that class is basically almost all of my free time. and at the end, because of some dumb mistakes i didn't see in the 1st exam, i got a C. and i took the 2nd exam sick and with a headache and i lowkey forgot like half of the procedures so let's pray i end up getting a C on that one as well. at this point i just wanna pass the class with a C and i'll be happy. but man. I AM SLOW AT THIS.</p>
 				</article>
