updated button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -124,7 +124,6 @@
 			<a href="https://snewberry.neocities.org" target="_blank"><img style="image-rendering: pixelated" src="https://snewberry.neocities.org/snewbutton.gif" alt="Snewberry Button"></a>
 			<a title="neet" href="https://fujoshi.nekoweb.org" target="_blank"><img src="!g/neetretreat.png" alt="neet retreat"></a>
 			<a title="cherie / niki" href="https://cherie.nekoweb.org" target="_blank"><img src="!g/cherie.gif" alt="cherie"></a>
-			<a title="rice" href="https://rice.place/" target="_blank"><img src="https://rice.nekoweb.org/button/riceplace.png"></a>
 			<a title="raum" href="https://raum.neocities.org/" target="_blank"><img src="!g/raum.gif" alt="raum"></a>
 			<a title="feelingmachine" href="https://feelingmachine.moe/" target="_blank"><img src="!g/feelingmachine.png" alt="feelingmachine"></a>
 			<a title="i can read this site for hours and hours. so many interesting bits in here" href="https://incessantpain.neocities.org/" target="_blank"><img src="!g/incessantpain.gif"></a>
@@ -191,6 +190,7 @@
 			<a title="velvet blue - a very sensire site" href="https://velvetblue.neocities.org/"><img src="https://files.catbox.moe/vltthb.png" alt="Velvet Blue"></a>
 			<a href="https://ajiyuu.neocities.org" target="_blank"><img src="!g/ajiyuu.jpeg" alt="ajiyuu"></a>
 			<a href="https://hat.neocities.org" target="_blank"><img src="!g/hat.gif" alt="hat"></a>
+			<a href="https://tsukinio.nekoweb.org" title="tsukinio" target="_blank"><img src="!g/tsukinio.gif" alt="tsukinio"></a>
 			<a href="https://zucchini.cc" target="_blank"><img src="!g/zucchini.gif" alt="zucchini.cc"></a>
 			<a href="https://nerucom.neocities.org" target="_blank"><img src="!g/nerucom.gif" alt="nerucom"></a>
 			<a title="virtuagirl" href="https://www.virtuagirl.net/" target="_blank"><img src="!g/virtuagirl.gif" alt="virtuagirl"></a>
@@ -202,6 +202,7 @@
 			<a title="dvdnerd" href="https://dvdnerd.neocities.org" target="_blank"><img src="!g/dvdnerd.jpg" alt="dvdnerd"></a>
 			<a href="https://scarecat.neocities.org" target="_blank"><img src="!g/scarecat.gif" alt="scarecat"></a>
 			<a href="https://yotsu.neocities.org/" target="_blank"><img src="!g/yotsu.gif"></a>
+			<a title="lilitdev - super fun site" href="https://lilithdev.neocities.org/" target="_blank"><img src="!g/lilithdev.gif"></a>
 			<a href="https://cloudworld.neocities.org/" target="_blank"><img src="!g/cloudworld.gif" alt="cloudworld"></a>
 			<a title="windchime - one of the early sites i discovered. used one of their templates for v1 of doqmeat.com too!" href="https://windchime.neocities.org/" target="_blank"><img src="!g/windchime.gif"></a>
 			<a title="whiona" href="https://whiona.me/" target="_blank"><img src="!g/whiona.png" alt="whiona"></a>
@@ -389,6 +390,7 @@
 			<a title="lovely photos on their blog" href="https://bootlegfriend.neocities.org" target="_blank"><img src="!g/bootleg.png" alt="bootleg"></a>
 			<a href="https://angelscake.neocities.org/" target="_blank"><img src="!g/angelscake.gif" alt="angelscake"></a>
 			<a href="https://sealparty.neocities.org" target="_blank"><img src="!g/sealparty.gif"></a>
+			<a title="rice" href="https://rice.place/" target="_blank"><img src="https://rice.nekoweb.org/button/riceplace.png"></a>
 		</div>
 
 		<p><a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> /
