--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -144,24 +144,17 @@ finished on 02.mar.25 -->
 				</section>
 				<section class="notepad-boxes" id="now">
 					<!-- take out the break lines..... be normal -->
-					<br>
 					<h3>currently...</h3>
-					<br>
 					<p><span class="title">feeling: </span> <a href="https://www.imood.com/users/doqmeat"><img src="https://moods.imood.com/display/uname-doqmeat/trans-1/imood.gif" alt="The current mood of doqmeat at www.imood.com" border="0"></a></p>
-					<br>
 					<p><span class="title">status: </span>
 						<span id="statuscafe-username"></span>
 						<span id="statuscafe-content"></span>
 					</p>
-					<br>
-					<p><span class="title">playing: </span> -</p>
-					<br>
+					<!-- <p><span class="title">playing: </span> </p> -->
 					<p><span class="title">watching: </span> my cat from hell</p>
-					<br>
-					<p><span class="title">reading: </span> -</p>
-					<br>
-					<p><span class="title">working on: </span> studying, NOT being sick, cleaning up code here and there</p>
-					<p class="date">last updated: 23.mar.25</p>
+					<!-- <p><span class="title">reading: </span> </p> -->
+					<p><span class="title">working on: </span> studying, cleaning up code here and there, recovering my voice</p>
+					<p class="date">last updated: 03.apr.25</p>
 				</section>
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
