--- a/doqmeat/fashion/index.html
+++ b/doqmeat/fashion/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="gallery">
       <h2>outfits</h2>
-      <img src="!g/fits/250403.png" alt="purple shirt with a puffy skirt" class="fit-pic caption-pic" title="i saw this shirt at my store and i IMMEDIATELY fell in love" tabindex="0">
+      <img src="!g/fits/250403.png" alt="purple shirt with a puffy skirt" class="fit-pic caption-pic" title="i saw this skirt at my store and i IMMEDIATELY fell in love with it. i've never had a puffy skirt like this before. awesome." tabindex="0">
       <img src="!g/fits/250121.png" alt="white shirt with a silly cat and cream jeans" class="fit-pic caption-pic" title="love the shirt and the earrings a lot from this fit! i think they look so nice together" tabindex="0">
       <img class="fit-pic caption-pic" src="!g/fits/18.png" title="silly green fit" alt="overalls with a striped green and black shirt and a froggy hat" tabindex="0">
       <img class="fit-pic caption-pic" title="i love this skirt so much!" src="!g/fits/17.png" alt="black shirt, purple skirt" tabindex="0">
