added a confirm box when clicking the chatroom button

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -118,7 +118,7 @@ finished on 02.mar.25 -->
 				<button onclick="showBox('webrings')">webrings</button>
 				<button onclick="showBox('listings')">listings</button>
 				<button onclick="showBox('pixel')">pixel</button>
-				<button onclick="showBox('chat')">chatbox</button>
+				<button onclick="showBox('chat'),chatPopup()">chatbox</button>
 				<button onclick="showBox('stats')">stats</button>
 			</div>
 			<!-- notepad decorations -->
