added 1 new pic to photobook

--- a/doqmeat/photobook/index.html
+++ b/doqmeat/photobook/index.html
@@ -351,6 +351,14 @@ coded with love by des
 		<!-- 4th column -->
 		<div class="column">
 
+			<div class="pic digi"><img src="!g/250406-bloom.jpg">
+				<div class="hov">
+					<div class="caption">
+						so nice seeing the trees blooming.<br><b>taken on 03.apr.25</b>
+					</div>
+				</div>
+			</div>
+
 			<div class="pic film">
 				<img src="!g/240702-filmscans%20(1).jpg">
 				<img src="!g/240702-filmscans%20(3).jpg">
@@ -452,7 +460,7 @@ coded with love by des
 	<div id="home"><a title="go back to homepage" href="/"><img src="/!g/pix/polaroid_5.gif"></a></div>
 
 	<footer>
-		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 16.jul.24</b>
+		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 06.apr.25</b>
 		<br>
 		<b>credit:</b> bg by <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a> / header font by <a href="https://www.dafont.com/growing-garden-script.font" target="_blank">helotype</a> / border-img from <a href="https://fujoshi.nekoweb.org" target="_blank">mimi</a>!
 		<br>
