new log to JS page and updated bash page

--- a/doqmeat/learning/bash/index.html
+++ b/doqmeat/learning/bash/index.html
@@ -43,6 +43,7 @@
 
 		</ul>
 		<h3>notes</h3>
+		<p>you can use logical operators like <code>&&</code> (AND) and <code>||</code> (OR). not really sure in what case i would use OR, but i use AND frequently for executing multiple commands at once.</p>
 		<p>you can hit <code>tab</code> and the terminal will (try to) autocomplete where ever directory or file you want to go.</p>
 		<p>when typing a file that has an ! you need to escape it using the backslash. if i have a folder called <b>!g/</b> then you would write <code>\!g/</code> on the terminal.</p>
 		<p>files with spaces need to be closed with single or double quotes like this <code>'folder 1'</code></p>
@@ -70,7 +71,7 @@
 	<footer>
 		....... ᓚᘏᗢ .......
 		<br>
-		<b>last updated on: 29.aug.24</b>
+		<b>last updated on: 06.apr.25</b>
 		<br>
 		<a href="../index.html">learning</a> / <a href="/">home</a> / <a href="#">top</a>
 	</footer>
