--- a/doqmeat/learning/index.html
+++ b/doqmeat/learning/index.html
@@ -24,9 +24,8 @@
 			<p>(　o=^•ェ•)o　┏━┓ stuff i'm currently learning about, mostly related to coding. <a href="https://www.swyx.io/learn-in-public" target="_blank" class="outlink">insp</a></p>
 			<ul>
 				<li><a href="javascript/index.html">javascript</a></li>
-				<li><a href="python/index.html">python</a></li>
-				<li><s title="possibly soon...">C++</s></li>
-				<li><a href="bash/index.html">bash reference sheet</a> - when im a little stupid for the git bash manuals so i have to make my own reference sheet for the terminal.</li>
+				<li><a href="python/index.html">python</a> - archived</li>
+				<li><a href="bash/index.html">bash reference sheet</a> - when im a little stupid for the git bash manuals so i have to make my own reference sheet for the terminal. also i just forget a lot of these commands.</li>
 			</ul>
 		</main>
 		<footer>
