--- a/doqmeat/learning/javascript/practice.html
+++ b/doqmeat/learning/javascript/practice.html
@@ -33,6 +33,11 @@
 	<main>
 		<nav><a href="#thoughts">thoughts</a> / <a href="#sheet">cheatsheet</a></nav>
 		<h2 id="thoughts">thoughts</h2>
+		<p>so far i've managed to do a couple of things around my site, i introduced a dialog box when clicking the chatbox tab and it asks you to agree to the rules. i was originally going to do it with an <code>alert()</code> but then i later found out about <code>confirm()</code> which is PERFECT for what i wanted to do. also learned i can do a custom one using the <code>dialog</code> element so in the future i'll get to that :p <a title="github source code" href="https://github.com/doqmeat/doqmeat.com/blob/main/doqmeat/!f/v5/script.js#L45" target="_blank" class="outlink">code snippet</a></p>
+		<p>i've also found a way to iterate through the years using the javascript <code>Date()</code> constructor <small>need to look up this term later...</small> so i don't have to write the same piece of coding every year for my microblog! also cleaned up the code a bit so it's easier to use for me. you can see the changes for all of that <a title="github commit diff" href="https://github.com/doqmeat/doqmeat.com/commit/4f99cd5cef3b42988b7089074761adeb8ce285a5#diff-deafc4cb713ec8a76a49ac6ef62c1c023c326730b300588fcfd8f171030e0a9e" target="_blank" class="outlink">here</a>. it kind of gives me an idea for my <a href="/journal">journal</a> page for the calendar iframe but... i'm not sure if i'll go with it at the end of the day. we will see!</p>
+		<p>been also writing more comments on my JS files. it really is nice when you go back to them and know wtf each thing does. thank you professor.</p>
+		<p class="date">06.apr.25</p>
+		<hr>
 		<p>my class <i>introduction to programming</i> (which focuses on c++) is kinda doing wonders for all the things that i've done with JS without really knowing WHY they worked the way they did... i'm also currently reading <i>JavaScript All-in-One For Dummies</i> which i had saved in a pdf from god knows where. i think my previous knowledge + my class is making the first few chapters of this kinda of a breeze but wow!!! i have learned so many little things about JS so far that i didn't know about. been mostly reading it on the train so i have a few notes of stuff i want to practice and write about on this page once i have some more free time. but at least for me, i think <mark>it is way easier to get all of this new information from a book</mark> rather then a documentation site (w3schools, mozilla, etc. etc.) it def makes the process of learning these things way less intimidating.</p>
 		<p class="date">05.mar.25</p>
 		<hr>
@@ -78,8 +83,6 @@
 	</main>
 
 	<footer>
-		last updated: <b>28.oct.24</b>
-		<br>
 		....... ᓚᘏᗢ .......
 		<br>
 		<a href="index.html">JS</a> / <a href="../index.html">learning</a> / <a href="/">home</a> / <a href="#">top</a>
